--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,15 @@ spring.application.name=citccs
 # Server Configuration
 server.port=8080
 
-# Database Configuration (MySQL)
+# Database Configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://aws-1-ap-northeast-1.pooler.supabase.com:6543/postgres
 spring.datasource.username=postgres.gjvodijwoamyjperbiyr
-spring.datasource.password=fctLNb4KAz1V6BBQ
+spring.datasource.password=glendalegwapo.1
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=none
