alert message has been updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,12 @@ spring.datasource.url=jdbc:postgresql://aws-1-ap-northeast-1.pooler.supabase.com
 spring.datasource.username=postgres.gjvodijwoamyjperbiyr
 spring.datasource.password=glendalegwapo.1
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.maximum-pool-size=1
+spring.datasource.hikari.minimum-idle=0
+spring.datasource.hikari.idle-timeout=0
+spring.datasource.hikari.max-lifetime=60000
+spring.datasource.hikari.connection-timeout=5000
+spring.datasource.hikari.leak-detection-threshold=10000
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=none
@@ -31,7 +33,7 @@ spring.flyway.validate-on-migrate=false
 
 # JWT Configuration
 jwt.secret=ecaa760d-4d89-4ea2-819f-c9f2df147772
-jwt.expiration=86400000
+jwt.expiration=604800000
 
 # Logging
 logging.level.org.springframework.jdbc=DEBUG
