--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "uuid": "^13.0.0"
   },
   "scripts": {
