feature(update): can edit prdouct yeheyyyy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=citccs
 server.port=8080
 
 # Database Configuration (PostgreSQL)
-spring.datasource.url=jdbc:postgresql://aws-1-ap-northeast-1.pooler.supabase.com:6543/postgres
+spring.datasource.url=jdbc:postgresql://aws-1-ap-northeast-1.pooler.supabase.com:6543/postgres?prepareThreshold=0
 spring.datasource.username=postgres.gjvodijwoamyjperbiyr
 spring.datasource.password=glendalegwapo.1
 spring.datasource.driver-class-name=org.postgresql.Driver
